# superironic

./: .coveragerc  .gitreview  CONTRIBUTING.rst  HACKING.rst  README.rst  openstack-common.conf  requirements.txt  setup.cfg
doc/source/: conf.py  index.rst  installation.rst  usage.rst
superironic/: __init__.py  colors.py  config.py  credentials.py  executable.py  super_ironic.py  utils.py
superironic/cmd/: keyring.py  super_ironic.py
superironic/tests/: test_superironic.py
