[metadata]
name = superironic
summary = Use ironicclient with multiple Ironic environments, the easy way.
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    superironic

[entry_points]
console_scripts =
    superironic = superironic.cmd.super_ironic:main
    supernova-keyring = superironic.cmd.keyring:main

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = superironic/locale
domain = superironic

[update_catalog]
domain = superironic
output_dir = superironic/locale
input_file = superironic/locale/superironic.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = superironic/locale/superironic.pot
